deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nbam
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-bandwidth-annotation-manager
  namespace: nbam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: network-bandwidth-annotation-manager
  template:
    metadata:
      labels:
        app: network-bandwidth-annotation-manager
    spec:
      containers:
        - command:
            - ./network-bandwidth-annotation-manager
            - -v
          image: k3d-default-registry.localhost:9090/nbam:latest
          imagePullPolicy: Always
          name: network-bandwidth-annotation-manager
          ports:
            - containerPort: 8443
              name: https
          volumeMounts:
            - mountPath: /certs
              name: tls-certs
              readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: tls-network-bandwidth-annotation-manager
---
apiVersion: v1
kind: Service
metadata:
  name: network-bandwidth-annotation-manager
  namespace: nbam
spec:
  ports:
    - name: https
      port: 8443
  selector:
    app: network-bandwidth-annotation-manager
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: nbam/network-bandwidth-annotation-manager
  name: network-bandwidth-annotation-manager
  namespace: nbam
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: network-bandwidth-annotation-manager
        namespace: nbam
        path: /mutate
        port: 8443
    failurePolicy: Ignore
    name: nbam-ns-annotate.nbam.svc
    namespaceSelector:
      matchLabels:
        nbam-mode: "annotate"
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
        scope: Namespaced
    sideEffects: None
    timeoutSeconds: 5
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: network-bandwidth-annotation-manager
        namespace: nbam
        path: /mutate
        port: 8443
    failurePolicy: Ignore
    name: nbam-object-annotate.nbam.svc
    objectSelector:
      matchLabels:
        nbam-mode: "annotate"
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
        scope: Namespaced
    sideEffects: None
    timeoutSeconds: 5
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: network-bandwidth-annotation-manager
        namespace: nbam
        path: /strip
        port: 8443
    failurePolicy: Ignore
    name: nbam-ns-strip.nbam.svc
    namespaceSelector:
      matchLabels:
        nbam-mode: "strip"
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
        scope: Namespaced
    sideEffects: None
    timeoutSeconds: 5
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: network-bandwidth-annotation-manager
        namespace: nbam
        path: /strip
        port: 8443
    failurePolicy: Ignore
    name: nbam-object-strip.nbam.svc
    objectSelector:
      matchLabels:
        nbam-mode: "strip"
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
        scope: Namespaced
    sideEffects: None
    timeoutSeconds: 5
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: network-bandwidth-annotation-manager
        namespace: nbam
        path: /overwrite
        port: 8443
    failurePolicy: Ignore
    name: nbam-ns-overwrite.nbam.svc
    namespaceSelector:
      matchLabels:
        nbam-mode: "overwrite"
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
        scope: Namespaced
    sideEffects: None
    timeoutSeconds: 5
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: network-bandwidth-annotation-manager
        namespace: nbam
        path: /overwrite
        port: 8443
    failurePolicy: Ignore
    name: nbam-object-overwrite.nbam.svc
    objectSelector:
      matchLabels:
        nbam-mode: "overwrite"
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
        scope: Namespaced
    sideEffects: None
    timeoutSeconds: 5
  # TODO: Add scheduler field override paths
